fix: hide overflow scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,3 +46,16 @@ a {
   position: absolute;
   z-index: 1000000;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
